<resources>
    <string name="app_name" translatable="false">Halal_AppMWLLC</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_next">Далее</string>
    <string name="text_language">Язык</string>
    <string name="text_country">Страна</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textСountryOfList">Кыргызстан</string>
    <string name="txt_lang_list">Кыргызча</string>
    <string name="hijriy">Xижрий</string>
    <string name="data">22 Мухаррам 1443
</string>
    <string name="beshim">Бешим</string>
    <string name="ocklock">13:02</string>
    <string name="search">Поищи здесь
</string>
    <string name="E_scanner">E кодды</string>
    <string name="Izbrannoy">Избранное</string>
    <string name="Zayavka">Заявки</string>
    <string name="main">Главный</string>
    <string name="AkylbekuKubanysh">Акылбек у Кубаныч</string>
    <string name="LishnyyKabinet">Личный кабинет</string>
    <string name="Sobytie">Событие</string>
    <string name="settings">Настройки</string>
    <string name="glavnuy">Избронное</string>
    <string name="questions_i_answers">Вопросы и ответы</string>
    <string name="ob_organe_certification">Об органе по сертификации халяль</string>
    <string name="sobytye">Событие</string>
    <string name="o_app">О приложении</string>
    <string name="indstrua">Халал индустрия</string>
    <string name="lissensia_text">ЛИЦЕНЗИИ</string>
    <string name="sertifcat_halal_menu">Об органе по сертификации халяль</string>
    <string name="lishnyi_kabinet">Личный кабинет</string>
    <string name="imia">Имя</string>
    <string name="phone_user">Телефон</string>
    <string name="pochta">Почта</string>
    <string name="password_user">Пароль</string>
    <string name="povtor_pasword_user">Повторить пароль</string>
    <string name="pol_user">Пол</string>
    <string name="jenskiy_user_radio">Женский</string>
    <string name="mujskoi_user">Мужской</string>
    <string name="otmena_btn">Отмена</string>
    <string name="sohranit_btn">Сохранить</string>
    <string name="catolog_main">Каталог</string>
    <string name="ecode">E коды</string>
    <string name="main_text">Главный</string>
    <string name="text_adres">Введите свой электронный адрес
 или номер телефона, и мы отправим
вам ссылку для восстановления
доступа к аккаунту.</string>
    <string name="sslka">Получить ссылку для входа</string>
    <string name="voiti_user">Войти</string>
    <string name="and_user">или</string>
    <string name="zabyla_parol">Забыли пароль?</string>
    <string name="strana_text">Выберите страна</string>
    <string name="lang_text">Выберите язык</string>
    <string name="theme_setting">Тема</string>
    <string name="vybrat_theme">Выберите тему</string>
    <string name="svetlaya_tx">Светлая</string>
    <string name="theme_otmena_btn">ОТМЕНА</string>
    <string name="theme_ok_btn">ОК</string>
    <string name="ok">Ok</string>
    <string name="otmena">ОТМЕНА</string>
    <string name="temnay">Тёмная</string>
    <string name="russ" translatable="false">Русский</string>
    <string name="kyr" translatable="false">Кыргызча</string>
    <string name="time_namaz">Время намаз</string>
    <string name="bagymdat">Фаджр</string>
    <string name="voshod">Восход</string>
    <string name="zuhr">Зухр</string>
    <string name="asr">Аср</string>
    <string name="magrib">Магриб</string>
    <string name="isha">Иша</string>
    <string name="tahadjud">Тахажжуд</string>
    <string name="menu">Меню</string>
    <string name="vopros_otvet">Вопросы и ответы</string>
    <string name="share">Поделиться в...</string>
    <string name="serch">Поиск</string>
</resources>
