<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.start.LanguageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/language_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0A8791"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:padding="@dimen/padd_back"
            android:id="@+id/btnBackFromLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_language"
            android:fontFamily="@font/ttv"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

    </androidx.appcompat.widget.Toolbar>


   <RadioGroup
       android:id="@+id/radio_groupLang"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginTop="18dp"
       android:layout_marginHorizontal="18dp"
       app:layout_constraintTop_toBottomOf="@id/language_toolbar"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent" >
       <RadioButton
           android:id="@+id/radioBtnKyr"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="#0A8791"
           android:checked="true"
           android:text="@string/kyr" />
       <View
           android:layout_width="match_parent"
           android:layout_height="1.5dp"
           android:background="#000000"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />
       <RadioButton
           android:id="@+id/radioBtnPus"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/russ"
           android:textColor="#0A8791"/>
       <View
           android:layout_width="match_parent"
           android:layout_height="1.5dp"
           android:background="#000000"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />
   </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>